SaXAudio/Exports.h

    /// <summary>
    /// Initialize XAudio and create a mastering voice
    /// </summary>
    /// <returns>Return true if successful</returns>
    EXPORT BOOL Create();
    /// <summary>
    /// Release everything
    /// </summary>
    EXPORT void Release();
    /// <summary>
    /// Resume playing all voices
    /// </summary>
    EXPORT void StartEngine();
    /// <summary>
    /// Pause all playing voices
    /// </summary>
    EXPORT void StopEngine();
    /// <summary>
    /// That's the "Just play the darn thing!" button for ya
    /// Load and play audio from file path. It will also call Create() for you.
    /// Note that this will load the file from disc every single time
    /// </summary>
    /// <param name="filePath">Path to the ogg file</param>
    /// <param name="busID">The bus to play the audio on (0 for default bus)</param>
    /// <returns>voiceID for controlling the audio</returns>
    EXPORT INT32 PlayOggFile(const char* filePath, const INT32 busID = 0);
    /// <summary>
    /// Pause all playing voices
    /// </summary>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <param name="busID">Specific bus to pause (0 to pause all voices)</param>
    EXPORT void PauseAll(const FLOAT fade = 0.1f, const INT32 busID = 0);
    /// <summary>
    /// Resume playing all voices
    /// </summary>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <param name="busID">Specific bus to resume (0 to resume all voices)</param>
    EXPORT void ResumeAll(const FLOAT fade = 0.1f, const INT32 busID = 0);
    /// <summary>
    /// Stop all voices
    /// </summary>
    /// <param name="fade">Fade duration in seconds</param>
    /// <param name="busID">Specific bus to stop (0 to stop all voices)</param>
    EXPORT void StopAll(const FLOAT fade = 0.1f, const INT32 busID = 0);
    /// <summary>
    /// Protect a voice from PauseAll, ResumeAll and StopAll operations
    /// </summary>
    /// <param name="voiceID">The voice to protect</param>
    EXPORT void Protect(const INT32 voiceID);
    /// <summary>
    /// Add ogg audio data to the sound bank
    /// The data in the buffer will be decoded (async) and stored in memory
    /// The buffer cannot be freed/deleted immediately but can be done safely once decoded (i.e. during OnDecodedCallback)
    /// </summary>
    /// <param name="buffer">The ogg data buffer</param>
    /// <param name="length">The length in bytes of the data</param>
    /// <param name="callback">Gets called when decoding is done. Allows cleaning up resources (i.e. delete buffer)</param>
    /// <returns>unique bankID for that audio data</returns>
    EXPORT INT32 BankAddOgg(const BYTE* buffer, const UINT32 length, const OnDecodedCallback callback = nullptr);
    /// <summary>
    /// Load audio from file path into sound bank
    /// </summary>
    /// <param name="filePath">Path to the ogg file</param>
    /// <returns>bankID for the loaded audio</returns>
    EXPORT INT32 BankLoadOggFile(const char* filePath);
    /// <summary>
    /// Remove and free the memory of the specified audio data
    /// Voices still playing the bank data will not be stopped and will continue playing
    /// </summary>
    /// <param name="bankID">The bankID of the data to remove</param>
    EXPORT void BankRemove(const INT32 bankID);
    /// <summary>
    /// Flags the bank entry to be automatically removed once all voices playing it finish
    /// At least one voice must play the entry once the flag is set for the removal to happen
    /// </summary>
    /// <param name="bankID">The bankID of the data to remove</param>
    EXPORT void BankAutoRemove(const INT32 bankID);
    /// <summary>
    /// Create a voice for playing the specified audio data
    /// When the audio data finished playing, the voice will be deleted
    /// </summary>
    /// <param name="bankID">The bankID of the data to play</param>
    /// <param name="busID">The bus to play the voice on</param>
    /// <param name="paused">when false, the audio will start playing immediately</param>
    /// <returns>unique voiceID</returns>
    EXPORT INT32 CreateVoice(const INT32 bankID, const INT32 busID, const BOOL paused = true);
    /// <summary>
    /// Check if the specified voice exists
    /// </summary>
    /// <param name="voiceID">The voice to check</param>
    /// <returns>true if the specified voice exists</returns>
    EXPORT BOOL VoiceExist(const INT32 voiceID);
    /// <summary>
    /// Create a bus
    /// </summary>
    /// <returns>unique busID</returns>
    EXPORT INT32 CreateBus();
    /// <summary>
    /// Removes a bus
    /// All voices on that bus will be stopped
    /// </summary>
    /// <param name="busID">The bus to remove</param>
    EXPORT void RemoveBus(INT32 busID);
    /// <summary>
    /// Starts playing the specified voice
    /// Resets the pause stack
    /// </summary>
    /// <param name="voiceID">The voice to start</param>
    /// <returns>true if successful or already playing</returns>
    EXPORT BOOL Start(const INT32 voiceID);
    /// <summary>
    /// Starts playing the specified voice at a specific sample
    /// This can be called while playing to perform a seek
    /// </summary>
    /// <param name="voiceID">The voice to start</param>
    /// <param name="sample">The sample position to start at</param>
    /// <returns>true if successful</returns>
    EXPORT BOOL StartAtSample(const INT32 voiceID, const UINT32 sample);
    /// <summary>
    /// Starts playing the specified voice at a specific time in seconds
    /// This can be called while playing to perform a seek
    /// </summary>
    /// <param name="voiceID">The voice to start</param>
    /// <param name="time">The time position in seconds to start at</param>
    /// <returns>true if successful</returns>
    EXPORT BOOL StartAtTime(const INT32 voiceID, const FLOAT time);
    /// <summary>
    /// Stops playing the specified voice
    /// This will also delete the voice
    /// </summary>
    /// <param name="voiceID">The voice to stop</param>
    /// <param name="fade">Fade duration in seconds</param>
    /// <returns>true if successful</returns>
    EXPORT BOOL Stop(const INT32 voiceID, const FLOAT fade = 0.1f);
    /// <summary>
    /// Pause the voice and increase the pause stack.
    /// About the pause stack: if a voice is paused more than once, it will take
    /// the same amount of resumes for it to start playing again.
    /// </summary>
    /// <param name="voiceID">The voice to pause</param>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <returns>value of the pause stack</returns>
    EXPORT UINT32 Pause(const INT32 voiceID, const FLOAT fade = 0.1f);
    /// <summary>
    /// Reduce the pause stack and resume playing the voice if the stack becomes empty
    /// </summary>
    /// <param name="voiceID">The voice to resume</param>
    /// <param name="fade">The duration of the fade in seconds</param>
    /// <returns>value of the pause stack</returns>
    EXPORT UINT32 Resume(const INT32 voiceID, const FLOAT fade = 0.1f);
    /// <summary>
    /// Sets a callback for when a voice finishes playing
    /// </summary>
    /// <param name="callback">The callback function to call when voices finish</param>
    EXPORT void SetOnFinishedCallback(const OnFinishedCallback callback);